--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <link rel="icon" href="im/491440538_m.jpg" sizes="60x60" type="image/x-icon">
-
+    <link rel="shortcut icon" type="image/x-icon" href="im/favicon.ico">
     <link rel="style" href="style.css">
 
 
